namespace PsicoManager.Domain.Enums;

public enum CanalNotificacao
{
    Whatsapp,
    Email,
    Ambos
}
