namespace PsicoManager.Domain.Enums;

/// <summary>Status da cobrança — só avança (pendente → pago / inadimplente).</summary>
public enum StatusCobranca
{
    Pendente,
    Pago,
    Inadimplente
}
