namespace PsicoManager.Domain.Enums;

public enum StatusNotificacao
{
    Pendente,
    Enviado,
    Falha
}
