namespace PsicoManager.Domain.Enums;

public enum StatusProntuario
{
    Ativo,
    Arquivado
}
