namespace PsicoManager.Domain.Enums;

public enum TipoSessao
{
    Presencial,
    Teleconsulta
}
