namespace PsicoManager.Domain.Enums;

public enum FormaPagamento
{
    Pix,
    Outro
}
